Prefer ...::valueOf to new ...